--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="main-bloque">
             <img data-aos="fade-up"  src="./figuras/icon-2.png" alt="">
             <p data-aos="fade-up" >TU PRESENCIA ES MUY IMPORTANTE, NO OLVIDES CONFIRMAR ASISTENCIA CON MI MAMI.</p>
-            <a  data-aos="fade-up" class="boton2" target="_blank"  href="">CONFIRMAR</a>    
+            <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://wa.link/2wfiub">CONFIRMAR</a>    
         </div>
   </main>
 
